# eos_sdk_emu

./: .gitlab-ci.yml  CMakeLists.txt  NemirtingasEpicEmu.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
eos_dll/: NEW_FILES_COMPILE_CHECKLIST.md  eos_auth_flat.cpp  eos_connect_flat.cpp  eos_custominvites_flat.cpp  eos_flat_platform.cpp  eos_lobby_flat.cpp  eos_p2p_flat.cpp  eos_sanctions_flat.cpp  eos_ui_flat.cpp  eossdk_auth.h  eossdk_auth_idtoken.cpp  eossdk_connect.h  eossdk_connect_idtoken.cpp  eossdk_custominvites.cpp  eossdk_custominvites.h  eossdk_lobby.h  eossdk_lobby_rtc.cpp  eossdk_lobbydetails.h  eossdk_p2p.cpp  eossdk_p2p.h  eossdk_platform.cpp  eossdk_platform.h  eossdk_sanctions.cpp  eossdk_sanctions.h  eossdk_sessions.cpp  network.h  settings.cpp  settings.h
extra/eos_sdk/: eos_auth_types1.3.1.h  eos_common.h  eos_common1.3.1.h  eos_integratedplatform_types.h  eos_p2p_types.h
overlay/abseil/: portfile.cmake  vcpkg.json
overlay/nlohmann-json/: fix-4736_char8_t.patch  fix-4742_std_optional.patch  portfile.cmake
overlay/protobuf/: portfile.cmake
overlay/utf8-range/: portfile.cmake
